# tgcalls

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  action.html  action.yml  copy_build.sh  dispatcher.html  dispatcher_mixin.html  docker-compose.yaml  docker-compose.yml  exception.html  exceptions.html  group_call.html  group_call_device.html  group_call_factory.html  group_call_native.html  group_call_raw.html  group_call_type.html  index.html  mtproto_client_type.html  setup.py
.github/: FUNDING.yml
.github/workflows/: Dockerfile  build_and_deploy_pytgcalls_documentation.yaml  build_and_publish_linux_python_wheels_for_many_versions.yaml  build_and_publish_macos_wheels_for_many_python_versions.yaml  build_and_publish_python_macos_wheels_for_many_versions.yaml  build_and_publish_python_wheels_for_many_versions.yaml  build_and_publish_win_wheels_for_many_python_versions.yaml  build_and_publish_win_x32_wheels_for_many_python_versions.yaml  build_and_publish_win_x64_wheels_for_many_python_versions.yaml  build_and_push_manylinux_images.yaml  build_and_push_manylinux_webrtc_entrypoint_images.yaml  build_and_push_manylinux_webrtc_images.yaml  build_linux.yaml  build_python_wheel_for_many_versions.yaml
cmake/: init_target.cmake  libevent.cmake  libopenh264.cmake  libusrsctp.cmake  libwebrtcbuild.cmake
examples/: README.md  device_playout.py  file_playout.py  input.raw  player_as_smart_plugin.py  playout.py  pyav.py  radio_as_smart_plugin.py  recorder_as_smart_plugin.py  restream_using_raw_data.py
implementation/: group_call.html  group_call_device.html  group_call_file.html  group_call_native.html  group_call_raw.html  index.html
mtproto/: base_bridge.html  exceptions.html  index.html  pyrogram_bridge.html  telethon_bridge.html
mtproto/data/: base_wrapper.html  group_call_discarded_wrapper.html  group_call_participant_wrapper.html  group_call_wrapper.html  index.html
mtproto/data/update/: index.html  update_group_call_participants_wrapper.html  update_group_call_wrapper.html
pytgcalls/: .env.example  MANIFEST.in  helpers.py  pyproject.toml  setup.py  test.py  tgcalls.py  tgcalls_dev.py
pytgcalls/pdoc/: config.mako  credits.mako  head.mako  logo.mako
pytgcalls/pytgcalls/: __init__.py  action.py  dispatcher.py  dispatcher_mixin.py  exceptions.py  frame_placeholder  group_call.py  group_call_device.py  group_call_factory.py  group_call_native.py  group_call_raw.py  group_call_type.py  mtproto_client_type.py  utils.py
pytgcalls/pytgcalls/dispatcher/: __init__.py  action.py  dispatcher.py  dispatcher_mixin.py
pytgcalls/pytgcalls/implementation/: __init__.py  group_call.py  group_call_base.py  group_call_device.py  group_call_file.py  group_call_native.py  group_call_raw.py
pytgcalls/pytgcalls/mtproto/: __init__.py  base_bridge.py  exceptions.py  pyrogram_bridge.py  telethon_bridge.py
pytgcalls/pytgcalls/mtproto/data/: __init__.py  base_wrapper.py  group_call_discarded_wrapper.py  group_call_participant_wrapper.py  group_call_wrapper.py  participant_wrapper.py
pytgcalls/pytgcalls/mtproto/data/update/: __init__.py  (+2 more)
pytgcalls/utils/: helpers.py
src/api/: peer_connection_interface.h
src/api/video_codecs/: video_codec.cc
src/call/: BUILD.gn
src/common_audio/: wav_header.cc
src/common_video/h265/: h265_sps_parser.h  h265_vps_parser.h
src/logging/rtc_event_log/encoder/: rtc_event_log_encoder_legacy.cc  rtc_event_log_encoder_new_format.cc
src/media/base/: media_constants.cc  media_constants.h
src/media/engine/: webrtc_media_engine.cc  webrtc_media_engine.h  webrtc_video_engine.cc  webrtc_voice_engine.h
src/modules/audio_device/mac/: audio_device_mac.cc  audio_device_mac.h
src/modules/audio_device/win/: core_audio_base_win.cc  core_audio_input_win.cc  core_audio_output_win.cc
src/modules/audio_processing/aec3/: reverb_model_estimator.h
src/modules/congestion_controller/rtp/: transport_feedback_demuxer.h
src/modules/desktop_capture/linux/: base_capturer_pipewire.cc  base_capturer_pipewire.h
src/modules/rtp_rtcp/source/: rtp_format_h265.cc
src/modules/video_coding/include/: video_codec_interface.h
src/pc/: dtls_srtp_transport.h  peer_connection.h  peer_connection_message_handler.cc  rtp_transport.cc  rtp_transport_internal.h
src/rtc_base/: BUILD.gn
src/rtc_base/system/: arch.h
src/sdk/android/: BUILD.gn
src/video/: rtp_video_stream_receiver.cc  video_receive_stream.cc
tgcalls/: CMakeLists.txt  Instance.h  MediaManager.h  VideoCaptureInterface.h  VideoCaptureInterfaceImpl.cpp  VideoCaptureInterfaceImpl.h  getSourcesList.py
tgcalls/cmake/: external_ffmpeg.cmake  lib_tgcalls.cmake
tgcalls/desktop_capturer/: DesktopCaptureSourceManager.cpp
tgcalls/group/: GroupInstanceCustomImpl.cpp  GroupInstanceImpl.cpp  GroupInstanceImpl.h  StreamingPart.cpp
tgcalls/platform/: PlatformInterface.h
tgcalls/platform/darwin/: AudioDeviceModuleIOS.h  DarwinInterface.h  DesktopCaptureSourceView.mm  GLVideoViewMac.mm  TGRTCDefaultVideoEncoderFactory.mm  TGRTCVideoDecoderH265.mm  TGRTCVideoEncoderH264.mm  VideoCMIOCapture.mm  VideoCameraCapturer.mm  VideoCameraCapturerMac.h  VideoCameraCapturerMac.mm  VideoCapturerInterfaceImpl.h  VideoCapturerInterfaceImpl.mm  VideoMetalView.h  VideoMetalViewMac.h  objc_video_encoder_factory.mm
tgcalls/platform/tdesktop/: DesktopInterface.cpp  VideoCameraCapturer.h  VideoCapturerInterfaceImpl.h
tgcalls/reference/: InstanceImplReference.cpp  InstanceImplReference.h
tgcalls/src/: FileAudioDevice.cpp  FileAudioDevice.h  FileAudioDeviceDescriptor.h  InstanceHolder.h  NativeInstance.cpp  NativeInstance.h  RawAudioDevice.cpp  RawAudioDevice.h  RawAudioDeviceDescriptor.cpp  RawAudioDeviceDescriptor.h  RtcServer.cpp  RtcServer.h  WrappedAudioDeviceModuleImpl.cpp  WrappedAudioDeviceModuleImpl.h  config.h.in  main.cpp  tgcalls.cpp
tgcalls/src/video/: PythonSource.cpp  PythonSource.h  PythonVideoTrackSource.cpp  PythonVideoTrackSource.h
(+7 files in other folders)
